Prevent affiliation selection from collapsing when affiliations too long

--- a/src/editor/styles/_contributors.css
+++ b/src/editor/styles/_contributors.css
@@ -49,5 +49,5 @@
 }
 
 .sc-contributors .sc-multi-select {
-  padding: 10px;
+  width: 200px;
 }
